external links now use _self, and updated the wording on the about page

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,9 +1,17 @@
 <div id="aboutWrap">
   <p>
-    <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a>
-    playground for experimenting with web technologies. This website is being
-    updated regularly. Please report any
-    <a class="inlineLink" onclick="location.hash='report'">issues</a> you run
-    into.
+    Rather than giving Google, or Meta, or Apple your data.
+    <br />
+    Give it to me instead. ;)
+  </p>
+  <p>
+    I host
+    <a class="inlineLink" onclick="externalLink('https://apps.tavin.xyz/')"
+      >apps and services</a
+    >
+    that I hope you will find useful. If you ever want to get in touch, you can
+    email me at
+    <a class="inlineLink" href="mailto:tjd@tavin.xyz">tjd@tavin.xyz</a> or
+    <a class="inlineLink" onclick="updateHash('chat')">chat now</a>.
   </p>
 </div>
