changed from custom location-by-hash function to location.hash

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -12,6 +12,6 @@
     that I hope you will find useful. If you ever want to get in touch, you can
     email me at
     <a class="inlineLink" href="mailto:tjd@tavin.xyz">tjd@tavin.xyz</a> or
-    <a class="inlineLink" onclick="updateHash('chat','Chat Now')">chat now</a>.
+    <a class="inlineLink" onclick="location.hash='chat'">chat now</a>.
   </p>
 </div>
