added line break

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -9,8 +9,9 @@
     <a class="inlineLink" onclick="externalLink('https://apps.tavin.xyz/')"
       >apps and services</a
     >
-    that I hope you will find useful. If you ever want to get in touch, you can
-    email me at
+    that I hope you will find useful.
+    <br />
+    If you ever want to get in touch, you can email me at
     <a class="inlineLink" href="mailto:tjd@tavin.xyz">tjd@tavin.xyz</a> or
     <a class="inlineLink" onclick="location.hash='chat'">chat now</a>.
   </p>
