added wiki link to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,11 @@
             >
           </li>
           <li class="menuItem">
+            <a id="wikiLink"
+              >Wiki<span class="Icon material-symbols-outlined"> book </span></a
+            >
+          </li>
+          <li class="menuItem">
             <a id="chatLink"
               >Chat<span class="Icon material-symbols-outlined"> chat </span></a
             >
