removed about button changed the homepage "Learn More" button to "View Apps"

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,3 +1,8 @@
 <div id="learnMoreBtnWrap">
-  <button id="learnMoreBtn" onclick="location.hash='about'">Learn More</button>
+  <button
+    id="learnMoreBtn"
+    onclick="window.location.href = 'https://apps.tavin.xyz';"
+  >
+    View Apps
+  </button>
 </div>
