moved from public.tavin.xyz to s3.tavin.xyz for file hosting

--- a/public/html/tavin.html
+++ b/public/html/tavin.html
@@ -1,6 +1,6 @@
 <div id="aboutWrap">
   <img
-    src="https://public.tavin.xyz/media/profile-small.webp"
+    src="https://s3.tavin.xyz/public/media/profile-small.webp"
     alt="Tavin Dotson"
     id="tavinIMG"
   />
