--- a/public/html/report.html
+++ b/public/html/report.html
@@ -1,1 +1,13 @@
-<iframe style="width: 100%;" src="https://docs.google.com/forms/d/e/1FAIpQLScFRYYwEi-o5xVtzatJLBkZgbEQhiRzOIbhpuaYBmiAfPyiWA/viewform?embedded=true" width="100%" height="1247" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<!-- <iframe style="width: 100%;" src="https://docs.google.com/forms/d/e/1FAIpQLScFRYYwEi-o5xVtzatJLBkZgbEQhiRzOIbhpuaYBmiAfPyiWA/viewform?embedded=true" width="100%" height="1247" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+<div
+data-heyform-id="QxVybQod"
+data-heyform-type="standard"
+data-heyform-custom-url="https://form.tavin.xyz/form/"
+data-heyform-width-type="%"
+data-heyform-width="100"
+data-heyform-height-type="px"
+data-heyform-height="500"
+data-heyform-auto-resize-height="true"
+data-heyform-transparent-background="true"
+></div>
+<script src="https://www.unpkg.com/@heyform-inc/embed@latest/dist/index.umd.js"></script>
